...
        android:layout_marginTop="10dp"
        android:text="@string/error_category_already_exist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edtTextAddCategory"
        android:layout_below="@+id/textAddCategoryError"
        android:background="@drawable/edittext_style"
        android:textColor="@color/note_header_bkg"
        android:hint="@string/hint_add_category"
        android:padding="8dp"
        android:layout_marginTop="8dp"
...
            android:id="@+id/buttonAddCategoryCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel" />

        <Button
            android:id="@+id/buttonAddCategoryAdd"
            android:layout_toEndOf="@+id/buttonAddCategoryCancel"
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/button_add_category_add"
...
