<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <item android:id="@+id/menu_add_category"
            android:icon="@drawable/icon_add_category"
            app:showAsAction="always"
            android:title="@string/appbar_add_category"/>

        <item android:id="@+id/menu_add_note"
            android:icon="@drawable/icon_add_note"
            app:showAsAction="always"
            android:title="@string/appbar_add_note"/>

        <item android:id="@+id/menu_search_note"
            android:icon="@drawable/icon_note_search"
            app:showAsAction="always"
            android:title="@string/appbar_search_note"/>

        <item android:id="@+id/menu_delete_category"
            android:icon="@drawable/icon_delete_category"
            app:showAsAction="ifRoom"
            android:title="@string/appbar_delete_category"/>

        <item android:id="@+id/menu_settings"
            android:icon="@drawable/icon_settings"
            app:showAsAction="ifRoom"
            android:title="@string/appbar_settings"/>

</menu>