<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/user_guide_background"
    android:padding="10dp">

    <com.vikas.mobile.mynotes.ui.LinedEditText
        android:id="@+id/edtTextNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_edit_style"
        android:imeOptions="actionNone"
        android:gravity="top"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:padding="10dp"
        android:singleLine="false"
        android:inputType="textMultiLine" />

    <RelativeLayout
        android:id="@+id/containerAddNoteButtons"
        android:layout_below="@+id/edtTextNote"
        android:layout_marginTop="30dp"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonAddUpdateNote"
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/button_save_note"
            tools:ignore="RtlSymmetry" />

    </RelativeLayout>


</RelativeLayout>