...

        <ImageButton
            android:id="@+id/note_share"
            android:layout_height="25dp"
            android:layout_width="25dp"
            android:layout_alignParentEnd="true"
            android:layout_toLeftOf="@+id/note_delete"
            android:layout_marginRight="42dp"
            android:layout_centerVertical="true"
            android:background="@android:drawable/ic_menu_share" />

        <ImageButton
            android:id="@+id/note_delete"
...
            android:layout_centerVertical="true"
            android:layout_marginEnd="7dp"
            android:background="@drawable/cloud_synced_false" />
    </RelativeLayout>

    <TextView
        android:id="@+id/note_content_item"
        android:layout_below="@+id/note_content_header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@color/note_content"
        android:text="This is the the note content goes here. It will display all the lines that you entered." />
...
